--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,14 @@
     { "src": "config.ru", "use": "@vercel/ruby" }
   ],
   "routes": [
+    {
+      "src": "/audio/(.*)", 
+      "dest": "/audio/$1"
+    },
+    {
+      "src": "/(.*).mp3", 
+      "dest": "/audio/$1.mp3"
+    },
     { "src": "/(.*)", "dest": "/config.ru" }
   ]
 }
